--- a/raon-control/test/main-legacy.html
+++ b/raon-control/test/main-legacy.html
@@ -43,14 +43,6 @@
             }
         }
 
-        body {
-            background-color: black;
-            background-image: url('shadowbg.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: 50% 50%;
-        }
-
         #img4 {
             animation-name: example2;
             animation-duration: 5s;
@@ -108,11 +100,11 @@
         }
 
         .accelerator-control {
-            position: absolute;
-            color: white;
-            width: 150px;
-            left: 150px;
-            top: 40px;
+            position:absolute; 
+            color:white; 
+            width:150px; 
+            left:150px; 
+            top:40px;
             font-family: "Helvetica-Neue-Light";
         }
 
@@ -126,6 +118,20 @@
             text-align: center;
             font-size: 60px;
             font-family: "Roboto-Thin";
+        }
+
+        .contens_1x1 {
+            background-color: black;
+            width: 200px;
+            height: 200px;
+            float: left;
+        }
+
+        .contens_2x2 {
+            background-color: black;
+            width: 300px;
+            height: 300px;
+            float: left;
         }
 
         .title {
@@ -163,6 +169,7 @@
             height: 200px;
             float: left;
         }
+
     </style>
 </head>
 
@@ -179,28 +186,105 @@
     <div style="height:6px"></div>
 
     <div class="body" style="width:1920px; height:780px; display:flex; margin:auto;">
-        <div class="body-left" style="width:600px; height:780px;">
- 
+        <div class="body-left" style="width:600px; height:780px; background-color: MediumSeaGreen;">
+            <div class="contens_1x1">
+                <canvas id="chart1" widht="100x" height="200px" style="transform: translate(0%, 15%);"></canvas>
+                <div class="doughnu-chart-text">Storage1</div>
+            </div>
+            <div class="contens_1x1">
+                <canvas id="chart2" widht="100px" height="200px" style="transform: translate(0%, 15%);"></canvas>
+                <div class="doughnu-chart-text">Storage2</div>
+            </div>
+            <div class="contens_1x1">
+                <canvas id="chart3" widht="100px" height="200px" style="transform: translate(0%, 15%);"></canvas>
+                <div class="doughnu-chart-text">Storage3</div>
+            </div>
+
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">24.5%</p>
+                <p class="title">Flow</p>
+
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">3.4bar</p>
+                <p class="title">Pressure</p>
+
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
         </div>
 
         <div class="body-center" style="width:720px; height:780px;">
-
+            <div class="status-box">RUNNING</div>
+            <div style="margin:auto; position: relative; width:500px; height:500px;">
+                <div class="image-box"><img id="img1" src="images/img1.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img2" src="images/img2.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img3" src="images/img3.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img4" src="images/img4.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img5" src="images/img5.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img6" src="images/img6.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img7" src="images/img7.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img8" src="images/img8.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img9" src="images/img9.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img10" src="images/img10.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+                <div class="image-box"><img id="img11" src="images/img11.svg"
+                        style="position: relative; width:500; height:500;"></img></div>
+            </div>
         </div>
 
-        <div class="body-right" style="width:600px; height:780px;">
- 
+        <div class="body-right" style="width:600px; height:780px; background-color: dodgerblue;">
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
+            <div class="contens_2x2">
+                <p class="data" id="scwook-ai1">295C</p>
+                <p class="title">Temperature</p>
+            </div>
         </div>
     </div>
 
     <div class="bottom" style="width:1920px; height:200px; display:flex; margin:auto;">
-        <div class="bottom-left" style="width:600px; height:200px">
+        <div class="bottom-left" style="width:600px; height:200px; background-color: black;">
             <canvas id="canvas1" width="640px" height="200px"></canvas>
         </div>
-        <div class="bottom-center" style="width:640px; height:200px">
+        <div class="bottom-center" style="width:640px; height:200px; background-color: black;">
             <canvas id="canvas2" width="640px" height="200px"></canvas>
 
         </div>
-        <div class="bottom-right" style="width:600px; height:200px">
+        <div class="bottom-right" style="width:600px; height:200px; background-color: black;">
             <canvas id="canvas3" width="640px" height="200px"></canvas>
 
         </div>
@@ -219,7 +303,7 @@
                 })
             });
         }
-
+        
         // Line chart configuration
         function lineChartConfig(details) {
             // var color = Chart.helpers.color;
@@ -333,9 +417,9 @@
         window.onload = function () {
 
             var details = [
-                { label: "Line Chart1", color: window.chartColors.red },
-                { label: "Line Chart2", color: window.chartColors.green },
-                { label: "Line Chart3", color: window.chartColors.blue }
+                { label: "Line Chart1", color:window.chartColors.red },
+                { label: "Line Chart2", color:window.chartColors.green },
+                { label: "Line Chart3", color:window.chartColors.blue }
             ]
 
             var ctx1 = document.getElementById('canvas1').getContext('2d');
