--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -45,10 +45,7 @@
 
         body {
             background-color: black;
-            background-image: url('shadowbg.png');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: 50% 50%;
+
         }
 
         #img4 {
@@ -178,7 +175,8 @@
 
     <div style="height:6px"></div>
 
-    <div class="body" style="width:1920px; height:780px; display:flex; margin:auto;">
+    <div class="body" style="width:1920px; height:780px; display:flex; margin:auto; background-image: url('shadowbg.png'); background-repeat: no-repeat; background-attachment: fixed; background-position: 50% 50%;">
+        <svg id="polygon" width="120" height="104" viewBox="0 0 120 104"><style>.cls-1{fill:#0094c5;opacity:0.5;}</style><title>Untitled-1</title><polygon class="cls-1" points="90.12 0 30.04 0 0 52.03 30.04 104.06 90.12 104.06 120.16 52.03 90.12 0"/></svg>
         <div class="body-left" style="width:600px; height:780px;">
  
         </div>
