--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -44,7 +44,13 @@
         }
 
         body {
+            margin:0px;
+            /* width: 1920px;
+            height: 1080px; */
             background-color: black;
+            background-image: url('shadowbg.png'); 
+            background-repeat: no-repeat; 
+            background-position: center 100px;
 
         }
 
@@ -114,7 +120,7 @@
         }
 
         .status-box {
-            background-color: black;
+            /* background-color: black; */
             width: 300px;
             height: 50px;
             color: white;
@@ -146,25 +152,24 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
-        .doughnu-chart-text {
+        /* .doughnu-chart-text {
             color: white;
             font-size: 24px;
             text-align: center;
             font-family: "Roboto-Light";
             margin-top: 30px;
-        }
+        } */
 
-        .contens-wide-chart {
+        /* .contens-wide-chart {
             background-color: black;
             width: 640px;
             height: 200px;
             float: left;
-        }
+        } */
     </style>
 </head>
 
-<body style="background-color:black; margin:0px">
-
+<body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
         <div class="under-line-box"><img src="images/under-line.svg"></img></div>
@@ -175,7 +180,7 @@
 
     <div style="height:6px"></div>
 
-    <div class="body" style="width:1920px; height:780px; display:flex; margin:auto; background-image: url('shadowbg.png'); background-repeat: no-repeat; background-attachment: fixed; background-position: 50% 50%;">
+    <div class="body" style="width:1920px; height:780px; display:flex; margin:auto">
         <svg id="polygon" width="120" height="104" viewBox="0 0 120 104"><style>.cls-1{fill:#0094c5;opacity:0.5;}</style><title>Untitled-1</title><polygon class="cls-1" points="90.12 0 30.04 0 0 52.03 30.04 104.06 90.12 104.06 120.16 52.03 90.12 0"/></svg>
         <div class="body-left" style="width:600px; height:780px;">
  
