--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -143,7 +143,7 @@
         <div class="accelerator-control">Accelerator Control</div>
     </div>
 
-    <div style="height:6px"></div>
+    <div style="height:50px"></div>
 
     <div class="body-box" style="width:1920px; height:780px; display:flex; margin:auto; position: relative;">
 
@@ -740,17 +740,80 @@
             <polygon class="polygon-2"
                 points="90.12 0 30.04 0 0 52.03 30.04 104.06 90.12 104.06 120.16 52.03 90.12 0" />
         </svg>
-        <div class="body-left" style="width:600px; height:780px;">
+        <div class="body-left" style="width:660px; height:780px;">
+            <div class="body-left-grid"
+                style=" width:620px; height:740px; display: grid; grid-template-columns: 300px 300px; grid-template-rows: 160px 160px 160px 160px; gap: 20px; padding: 20px;">
+                <div
+                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 1/2; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 4/5; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="body-center" style="width:600px; height:780px;">
 
         </div>
 
-        <div class="body-center" style="width:720px; height:780px;">
+        <div class="body-right" style="width:660px; height:780px;">
+            <div class="body-right-grid"
+                style=" width:620px; height:740px; display: grid; grid-template-columns: 300px 300px; grid-template-rows: 160px 160px 160px 160px; gap: 20px; padding: 20px;">
+                <div
+                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 1/2; border-style: solid; border-width: 1px; border-color: #323232;">
 
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+
+                <div
+                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 4/5; border-style: solid; border-width: 1px; border-color: #323232;">
+
+                </div>
+            </div>
         </div>
-
-        <div class="body-right" style="width:600px; height:780px;">
-
-        </div>
+    </div>
     </div>
 
     <div class="bottom" style="width:1920px; height:200px; display:flex; margin:auto;">
