--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -596,10 +596,9 @@
             </div>
         </div>
 
-        <div class="body-center"
-            style="width:600px; height:780px; position: relative;">
+        <div id="body-center" style="width:600px; height:780px; position: relative; overflow: hidden;">
 
-            <svg id="module" width="268.3" height="683.35" viewBox="0 0 268.3 683.35">
+            <!-- <svg id="module" width="268.3" height="683.35">
                 <defs>
                     <style>
                         .module-1 {
@@ -613,7 +612,7 @@
                 </defs>
                 <polygon class="module-1"
                     points="267.3 181.44 267.3 1 1 1 1.79 181.44 1 275.02 36.69 682.35 154.19 682.35 231.62 682.35 267.3 275.02 267.3 181.44" />
-            </svg>
+            </svg> -->
 
         </div>
 
@@ -652,31 +651,227 @@
     </div>
     </div>
 
-    <div class="bottom" style="width:1920px; height:200px; display:flex; margin:auto;">
-        <div class="bottom-left" style="width:660px; height:200px">
-        </div>
-        <div class="bottom-center" style="width:600px; height:200px">
-            <svg class="moduleNavi" width="9" height="28">
-                <defs>
-                    <style>
-                        .moduleNavi-1 {
-                            fill: none;
-                            stroke: #818181;
-                            stroke-miterlimit: 10;
-                            stroke-width: 0.5px;
-                        }
-                    </style>
-                </defs>
-                <polygon class="moduleNavi-1"
-                    points="9.49 7.62 9.49 0.25 0.25 0.25 0.25 7.62 0.25 11.45 1.71 28.09 4.87 28.09 8.04 28.09 9.49 11.45 9.49 7.62" />
-            </svg>
-
-        </div>
-        <div class="bottom-right" style="width:660px; height:200px">
-        </div>
+    <div id="bottom" style="height:200px; position:relative;">
+        <!-- <svg class="moduleNavi" width="10" height="30">
+            <defs>
+                <style>
+                    .moduleNavi-1 {
+                        fill: none;
+                        stroke: #0094c5;
+                        stroke-miterlimit: 10;
+                        stroke-width: 0.5px;
+                    }
+                </style>
+            </defs>
+            <polygon class="moduleNavi-1"
+                points="9.49 7.62 9.49 0.25 0.25 0.25 0.25 7.62 0.25 11.45 1.71 28.09 4.87 28.09 8.04 28.09 9.49 11.45 9.49 7.62" />
+        </svg> -->
     </div>
-
     <script>
+        var initPos = 150;
+        var svgWidth = 268.3;
+        var svgHeight = 683.35;
+        var offset = svgWidth / 2;
+        // var repeatNumber = 10;
+        var containWidth = 600;
+        var timeout = 5;
+        var selection = 1;
+
+        // function modulePosition() {
+
+            var contain = document.getElementById('body-center');
+            var moduleSVG = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+
+            moduleSVG.setAttribute("id", "moduleID");
+            moduleSVG.setAttribute("width", svgWidth);
+            moduleSVG.setAttribute("height", svgHeight);
+            moduleSVG.style.position = "absolute";
+            moduleSVG.style.top = "50px";
+            moduleSVG.style.left = initPos + 'px';
+            var newElement = document.createElementNS("http://www.w3.org/2000/svg", 'polygon');
+            newElement.setAttribute("width", svgWidth);
+            newElement.setAttribute("height", svgHeight);
+            newElement.setAttribute("style", "fill:#014161;stroke:#2959a8;stroke-miterlimit:10;stroke-width:2px;opacity:0.3");
+            newElement.setAttribute("points", "267.3 181.44 267.3 1 1 1 1.79 181.44 1 275.02 36.69 682.35 154.19 682.35 231.62 682.35 267.3 275.02 267.3 181.44");
+
+            moduleSVG.appendChild(newElement);
+            contain.appendChild(moduleSVG);
+        // }
+
+        function moduleNaviPositing() {
+            var bottomDiv = document.getElementById('bottom');
+
+            for (let i = 0; i < 50; i++) {
+                var moduleSVG = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+                var moduleIdName = "module" + i;
+                moduleSVG.setAttribute("id", moduleIdName);
+                moduleSVG.setAttribute("width", 10);
+                moduleSVG.setAttribute("height", 30);
+
+                moduleSVG.onclick = function () {
+                    movingStart(i + 1)
+                };
+
+                moduleSVG.style.position = "absolute";
+                moduleSVG.style.right = 300 + (20 * i) + "px";
+                moduleSVG.style.top = "100px";
+
+                var moduleElement = document.createElementNS("http://www.w3.org/2000/svg", 'polygon');
+                moduleElement.setAttribute("width", "10");
+                moduleElement.setAttribute("height", "30");
+                moduleElement.setAttribute("style", "fill:none;stroke:#0094c5; stroke-miterlimit:10;stroke-width:0.5px");
+                moduleElement.setAttribute("points", "9.49 7.62 9.49 0.25 0.25 0.25 0.25 7.62 0.25 11.45 1.71 28.09 4.87 28.09 8.04 28.09 9.49 11.45 9.49 7.62");
+
+                moduleSVG.appendChild(moduleElement);
+                bottomDiv.appendChild(moduleSVG);
+            }
+        }
+
+        var moduleID = document.getElementById("moduleID");
+        var id = null;
+
+        function movingStop() {
+            clearInterval(id);
+        }
+
+        function movingStart(number) {
+            clearInterval(id);
+
+            var direction = null;
+            var repeat = Math.abs(selection - number)
+
+
+            if (selection < number) {
+                direction = 1;
+            } else if (selection > number) {
+                direction = -1;
+            } else {
+                direction = 0;
+            }
+
+            selection = number;
+
+            id = setInterval(moveToRight, timeout, direction);
+
+            var dx = 50;
+            var count = 0;
+            var movingSpeed = 50 * Math.pow(2, -10 * (count + 1) / repeat) + 30;
+
+            function moveToRight(dir) {
+
+                var currentPosLeft = parseInt(moduleID.style.left);
+
+                switch (dir) {
+                    case 1:
+                        if (currentPosLeft >= containWidth) {
+                            moduleID.style.left = -svgWidth + 'px';
+                            count += 1;
+                            movingSpeed = 50 * Math.pow(2, -10 * count / repeat) + 30;
+                        } else {
+                            moduleID.style.left = currentPosLeft + movingSpeed + 'px';
+
+                        }
+
+                        if (count == repeat) {
+                            clearInterval(id);
+                            leftToRight(-svgWidth);
+                        }
+                        break;
+
+                    case -1:
+                        if (currentPosLeft <= -svgWidth) {
+                            moduleID.style.left = containWidth + 'px';
+                            movingSpeed = 50 * Math.pow(2, -10 * count / repeat) + 30;
+                            count += 1;
+                        } else {
+                            moduleID.style.left = currentPosLeft - movingSpeed + 'px';
+                        }
+
+                        if (count == repeat) {
+                            clearInterval(id);
+                            rightToLeft(containWidth);
+                        }
+
+                        break;
+
+                    default:
+
+                }
+            }
+
+            // 시작 전 clearInterval(id) 필요
+            function leftToRight(startPosition) {
+                var initPos1 = startPosition;
+                var finalPos1 = initPos;
+                var distance1 = Math.abs(finalPos1 - initPos1);
+                var finalScale1 = 1.0;
+                var scaleFactor1 = 0.5;
+                var opacity1 = 0.0;
+
+                var dt1 = 0.0;
+                var x1 = 0.0;
+                var leftPos1 = 0;
+
+                var id3 = setInterval(leftToCenter, 10);
+                var count = 1;
+                function leftToCenter() {
+                    if (leftPos1 == finalPos1) {
+                        clearInterval(id3);
+                    }
+                    else {
+                        dt1 += 0.016;
+                        x1 = 1 - Math.pow(2, -10 * dt1);
+                        leftPos1 = initPos1 + x1 * distance1;
+                        scale1 = 1.0;
+                        opacity1 = 1.0;
+
+                        if (leftPos1 > (finalPos1 - 1)) {
+                            leftPos1 = finalPos1;
+                        }
+
+                        moduleID.style.left = leftPos1 + 'px';
+                        moduleID.style.transform = 'scale(' + scale1 + ', ' + scale1 + ')';
+                        moduleID.style.opacity = opacity1;
+                    }
+                }
+            }
+
+            function rightToLeft(startPosition) {
+                var initPos1 = startPosition;
+                var finalPos1 = initPos;
+                var distance1 = Math.abs(finalPos1 - initPos1);
+                var finalScale1 = 1.0;
+                var scaleFactor1 = 0.5;
+                var opacity1 = 0.0;
+
+                var dt1 = 0.0;
+                var x1 = 0.0;
+                var leftPos = 0;
+
+                var id1 = setInterval(rightToCenter, 15);
+                var count = 1;
+                function rightToCenter() {
+                    if (leftPos == finalPos1) {
+                        clearInterval(id1);
+                    }
+                    else {
+                        dt1 += 0.016;
+                        x1 = 1 - Math.pow(2, -10 * dt1);
+                        leftPos = initPos1 - x1 * distance1;
+                        scale1 = 1.0;
+                        opacity1 = 1.0;
+
+                        if (leftPos < (finalPos1 + 1)) {
+                            leftPos = finalPos1;
+                        }
+
+                        moduleID.style.left = leftPos + 'px';
+                        moduleID.style.transform = 'scale(' + scale1 + ', ' + scale1 + ')';
+                        moduleID.style.opacity = opacity1;
+                    }
+                }
+            }
+        }
 
         function polygonPositing() {
             var leftPolygonSVGElement = document.getElementsByClassName('leftPolygon');
@@ -699,13 +894,13 @@
                 var animationDelay = j / 20;
 
                 for (var i = 0; i < num; i++) {
-                    leftPolygonSVGElement[polygonCount].style.position = 'absolute';
+                    // leftPolygonSVGElement[polygonCount].style.position = 'absolute';
                     leftPolygonSVGElement[polygonCount].style.setProperty('--opacity', (j + 1) / 80);
                     leftPolygonSVGElement[polygonCount].style.setProperty('--delay', animationDelay);
                     leftPolygonSVGElement[polygonCount].style.left = leftPolygonInitPos - hShift + 'px';
                     leftPolygonSVGElement[polygonCount].style.top = (verticalInitPos + vShift) + verticalDt * i + 'px';
 
-                    rightPolygonSVGElement[polygonCount].style.position = 'absolute';
+                    // rightPolygonSVGElement[polygonCount].style.position = 'absolute';
                     rightPolygonSVGElement[polygonCount].style.setProperty('--opacity', (j + 1) / 80);
                     rightPolygonSVGElement[polygonCount].style.setProperty('--delay', animationDelay);
                     rightPolygonSVGElement[polygonCount].style.left = rightPolygonInitPos + hShift + 'px';
@@ -862,16 +1057,14 @@
             document.getElementById('time-stamp').innerHTML = d.toLocaleTimeString('en-GB');
         }
 
-        // var shieldSVG = '<svg class="polygon1" width="120" height="104" viewBox="0 0 120 104"><style>.cls-1{fill:#0094c5;opacity:0.1;}</style><polygon class="cls-1" points="90.12 0 30.04 0 0 52.03 30.04 104.06 90.12 104.06 120.16 52.03 90.12 0"/></svg>';
+        var myVar = setInterval(timer, 1000);
 
         window.onload = function () {
 
-            // var shieldBackground = document.getElementsByClassName("body");
-            // shieldBackground.innerHTML = shieldSVG;
-
             polygonPositing();
-            // rightPolygonPositing();
-            triggerAnimation();
+            // triggerAnimation();
+            // modulePosition();
+            moduleNaviPositing();
 
             var details = [
                 { label: "Line Chart1", color: window.chartColors.red },
@@ -879,16 +1072,16 @@
                 { label: "Line Chart3", color: window.chartColors.blue }
             ]
 
-            var ctx1 = document.getElementById('canvas1').getContext('2d');
-            //var lineConfig1 = lineChartConfig(details[0])
-            window.myChart = new Chart(ctx1, lineChartConfig(details[0]));
+            // var ctx1 = document.getElementById('canvas1').getContext('2d');
+            // //var lineConfig1 = lineChartConfig(details[0])
+            // window.myChart = new Chart(ctx1, lineChartConfig(details[0]));
 
-            var ctx2 = document.getElementById('canvas2').getContext('2d');
-            window.myChart = new Chart(ctx2, lineChartConfig(details[1]));
+            // var ctx2 = document.getElementById('canvas2').getContext('2d');
+            // window.myChart = new Chart(ctx2, lineChartConfig(details[1]));
 
-            var ctx3 = document.getElementById('canvas3').getContext('2d');
-            // var lineConfig2 = lineChartConfig(datails2)
-            window.myChart = new Chart(ctx3, lineChartConfig(details[2]));
+            // var ctx3 = document.getElementById('canvas3').getContext('2d');
+            // // var lineConfig2 = lineChartConfig(datails2)
+            // window.myChart = new Chart(ctx3, lineChartConfig(details[2]));
 
             // var ctx4 = document.getElementById('chart1').getContext('2d');
             // window.myChart4 = new Chart(ctx4, configDoughnut);
@@ -900,7 +1093,6 @@
             // window.myChart6 = new Chart(ctx6, configDoughnut);
 
             // doughnutChart('storage', 86);
-            var myVar = setInterval(timer, 1000);
             //var startMonitoring = setInterval(monitoring, 1000);
             //var change = setInterval(changeImage, 500);
         }
