--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -565,32 +565,28 @@
     <div class="body-contain" style="width:1920px; height:780px; display:flex; margin:auto; position: relative;">
         <div class="body-left" style="width:660px; height:780px;">
             <div class="body-left-grid">
-                <div class="grid-item"
-                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 1/2; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
-
+                <div class="grid-item" style="width:300px; height:160px;">
+                    <div class="data" style="position:absolute; left:50px; top: 50px;">
+                        Test
+                    </div>
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
-
-                </div>
-
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
 
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
 
                 </div>
 
-                <div class="grid-item"
-                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 4/5; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
+
+                </div>
+
+                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 4/5;">
 
                 </div>
             </div>
@@ -598,52 +594,30 @@
 
         <div id="body-center" style="width:600px; height:780px; position: relative; overflow: hidden;">
 
-            <!-- <svg id="module" width="268.3" height="683.35">
-                <defs>
-                    <style>
-                        .module-1 {
-                            fill: #014161;
-                            stroke: #2959a8;
-                            stroke-miterlimit: 10;
-                            stroke-width: 2px;
-                            opacity: 0.3;
-                        }
-                    </style>
-                </defs>
-                <polygon class="module-1"
-                    points="267.3 181.44 267.3 1 1 1 1.79 181.44 1 275.02 36.69 682.35 154.19 682.35 231.62 682.35 267.3 275.02 267.3 181.44" />
-            </svg> -->
-
         </div>
 
         <div class="body-right" style="width:660px; height:780px;">
             <div class="body-right-grid">
-                <div class="grid-item"
-                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 1/2; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
-
-                </div>
-
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
 
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
 
                 </div>
 
-                <div class="grid-item"
-                    style="width:300px; height:160px; background-color: #1a1a1a; opacity: 0.3; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
 
                 </div>
 
-                <div class="grid-item"
-                    style="width:620px; height:160px; background-color: #1a1a1a; opacity: 0.3; grid-column: 1/3; grid-row: 4/5; border-style: solid; border-width: 1px; border-color: #323232;">
+                <div class="grid-item" style="width:300px; height:160px;">
+
+                </div>
+
+                <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 4/5;">
 
                 </div>
             </div>
@@ -652,20 +626,6 @@
     </div>
 
     <div id="bottom" style="height:200px; position:relative;">
-        <!-- <svg class="moduleNavi" width="10" height="30">
-            <defs>
-                <style>
-                    .moduleNavi-1 {
-                        fill: none;
-                        stroke: #0094c5;
-                        stroke-miterlimit: 10;
-                        stroke-width: 0.5px;
-                    }
-                </style>
-            </defs>
-            <polygon class="moduleNavi-1"
-                points="9.49 7.62 9.49 0.25 0.25 0.25 0.25 7.62 0.25 11.45 1.71 28.09 4.87 28.09 8.04 28.09 9.49 11.45 9.49 7.62" />
-        </svg> -->
     </div>
     <script>
         var initPos = 150;
@@ -679,23 +639,23 @@
 
         // function modulePosition() {
 
-            var contain = document.getElementById('body-center');
-            var moduleSVG = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+        var contain = document.getElementById('body-center');
+        var moduleSVG = document.createElementNS("http://www.w3.org/2000/svg", "svg");
 
-            moduleSVG.setAttribute("id", "moduleID");
-            moduleSVG.setAttribute("width", svgWidth);
-            moduleSVG.setAttribute("height", svgHeight);
-            moduleSVG.style.position = "absolute";
-            moduleSVG.style.top = "50px";
-            moduleSVG.style.left = initPos + 'px';
-            var newElement = document.createElementNS("http://www.w3.org/2000/svg", 'polygon');
-            newElement.setAttribute("width", svgWidth);
-            newElement.setAttribute("height", svgHeight);
-            newElement.setAttribute("style", "fill:#014161;stroke:#2959a8;stroke-miterlimit:10;stroke-width:2px;opacity:0.3");
-            newElement.setAttribute("points", "267.3 181.44 267.3 1 1 1 1.79 181.44 1 275.02 36.69 682.35 154.19 682.35 231.62 682.35 267.3 275.02 267.3 181.44");
+        moduleSVG.setAttribute("id", "moduleID");
+        moduleSVG.setAttribute("width", svgWidth);
+        moduleSVG.setAttribute("height", svgHeight);
+        moduleSVG.style.position = "absolute";
+        moduleSVG.style.top = "50px";
+        moduleSVG.style.left = initPos + 'px';
+        var newElement = document.createElementNS("http://www.w3.org/2000/svg", 'polygon');
+        newElement.setAttribute("width", svgWidth);
+        newElement.setAttribute("height", svgHeight);
+        newElement.setAttribute("style", "fill:#014161;stroke:#2959a8;stroke-miterlimit:10;stroke-width:2px;opacity:0.3");
+        newElement.setAttribute("points", "267.3 181.44 267.3 1 1 1 1.79 181.44 1 275.02 36.69 682.35 154.19 682.35 231.62 682.35 267.3 275.02 267.3 181.44");
 
-            moduleSVG.appendChild(newElement);
-            contain.appendChild(moduleSVG);
+        moduleSVG.appendChild(newElement);
+        contain.appendChild(moduleSVG);
         // }
 
         function moduleNaviPositing() {
