flow animation test

--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -569,9 +569,14 @@
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
-                    <div class="data" style="position:absolute; left:50px; top: 50px;">
-                        Test
+                    <div class="data-name" style="position:absolute; left:20px; top: 30px;">
+                        4K Level
                     </div>
+
+                    <div class="data-value" style="position:absolute; left:20px; top: 70px;">
+                        80cm
+                    </div>
+
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
