--- a/raon-control/test/liquidFillAnimation.html
+++ b/raon-control/test/liquidFillAnimation.html
@@ -50,7 +50,7 @@
             text-align: center;
             color: #ddd;
             position: relative;
-            /* overflow: hidden; */
+            overflow: hidden;
             z-index: -1;
         }
 
@@ -69,10 +69,10 @@
 
         @keyframes fill {
             from {
-                top: 250px;
+                top: 110px;
             }
             to {
-                top: 100px;
+                top: 50px;
             }
         }
 
