--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -566,15 +566,18 @@
         <div class="body-left" style="width:660px; height:780px;">
             <div class="body-left-grid">
                 <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
+                    <div class="data-name" style="position:absolute; left:20px; top: 30px;">
+
+                    </div>
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
-                    <div class="data-name" style="position:absolute; left:20px; top: 30px;">
+                    <div class="data-name" style="position:relative; left:20px; top: 25px;">
                         4K Level
                     </div>
 
-                    <div class="data-value" style="position:absolute; left:20px; top: 70px;">
-                        80cm
+                    <div class="data-value" style="position:relative; left:20px; top: 35px;">
+                        80 cm
                     </div>
 
                 </div>
